--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "nodemon": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "reactflow": "^11.10.1",
     "typescript": "^4.9.5",
